--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^0.8.7",
     "bower": "^1.7.9",
     "express": "^4.14.0",
-    "mongoose": "^4.5.3"
+    "mongoose": "^4.5.3",
+    "q": "^1.4.1"
   }
 }
