Allow user to input price data and update the data on server

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bower": "^1.7.9",
     "express": "^4.14.0",
     "mongoose": "^4.5.3",
+    "mongoose-timestamp": "^0.6.0",
     "q": "^1.4.1"
   }
 }
