--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
-    "ng-table": "^1.0.0"
+    "ng-table": "^1.0.0",
+    "angular-ui-grid": "^3.2.1"
   }
 }
