--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "^1.5.7",
     "angular-ui-router": "^0.3.1",
     "ng-table": "^1.0.0",
-    "angular-ui-grid": "^3.2.1"
+    "angular-ui-grid": "^3.2.1",
+    "bootstrap": "^3.3.6"
   }
 }
