--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/lingyc/2016-06-mvp#readme",
   "dependencies": {
     "bcrypt": "^0.8.7",
+    "body-parser": "^1.15.2",
     "bower": "^1.7.9",
     "express": "^4.14.0",
     "jwt-simple": "^0.5.0",
